deployment/blog-deployment.yaml
# working example code from a tutorial
#
# minikube addons enable ingress
# kubectl get pods -n kube-system
#
# kubectl apply -f deployment/blog-deployment.yaml
# kubectl apply -f deployment/blog-service.yaml
# kubectl apply -f deployment/blog-ingress.yaml
# minikube dashboard --url=true
apiVersion: apps/v1
kind: Deployment
metadata:
    name: laravel-kubernetes-demo
spec:
    selector:
        matchLabels:
            run: laravel-kubernetes-demo
    template:
        metadata:
            labels:
                run: laravel-kubernetes-demo
        spec:
            containers:
                - name: demo
                  image: eriktrapman/kubtest-php
                  ports:
                      - containerPort: 80
