deployment/deployment-digitalocean.yaml
# working setup for DO
apiVersion: apps/v1
kind: Deployment
metadata:
    name: kubtest-php
spec:
    replicas: 2
    selector:
        matchLabels:
            run: kubtest-php
    template:
        metadata:
            labels:
                run: kubtest-php
        spec:
            containers:
                - name: demo
                  image: eriktrapman/kubtest-php:485356ef84255e383a10d2b3f217d976190282a5
                  ports:
                      - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
    name: kubtest-php-service
    labels:
        run: kubtest-php # name of deployment ?
spec:
    type: NodePort
    selector:
        run: kubtest-php # name of deployment ?
        #pod-template-hash: 69fbb64bf9
    ports:
        # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
        - port: 80
          targetPort: 80
            # Optional field
            # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
        #nodePort: 30007
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: kubtest-php-ingress
    annotations:
        ingress.kubernetes.io/rewrite-target: /
spec:
    rules:
        - http:
              paths:
                  - path: /
                    backend:
                        serviceName: kubtest-php-service
                        servicePort: 80
